@@ -1,3 +1,7 @@
+2004-11-12  Daniel Steffen  <das@users.sourceforge.net>
+
+	* macosx/tkMacOSXXStubs.c: implemented XGetGeometry().
+
 2004-11-12  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* generic/tkCmds.c (Tk_TkObjCmd): use correct screen data when
